# termai

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
.cursor/rules/: error-handling.mdc  git-commits.mdc  gui-patterns.mdc  project-architecture.mdc  python-style.mdc  safety-rules.mdc
.github/workflows/: build.yml
examples/: plugin_example.py
scripts/: install.sh  uninstall.sh
termai/: __init__.py  __main__.py  allowlist.py  chat.py  classifier.py  cli.py  config.py  context.py  executor.py  generator.py  gui.py  installer.py  logger.py  model.py  models.py  orchestrator.py  plugins.py  process_log.py  remote.py  safety.py  uninstaller.py
