[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termai"
version = "0.1.0"
description = "Local AI-powered terminal assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "gpt4all>=2.6.0",
]

[project.optional-dependencies]
remote = [
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "pyinstaller>=6.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.30",
    "pytest>=7.0",
    "ruff>=0.3",
    "pyinstaller>=6.0",
]

[project.scripts]
termai = "termai.cli:main"
tai = "termai.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
